--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.1",
     "express": "^4.15.4",
     "mongoose": "^4.11.11",
     "nodemon": "^1.11.0",
