--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,13 @@
   "main": "index.js",
   "engines": {
     "node": "8.1.2",
-    "npm": "5.0.3"
+    "npm": "5.3.0"
   },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [
-    ""
-  ],
+  "keywords": [""],
   "author": "",
   "license": "ISC",
   "dependencies": {
