--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [""],
+  "keywords": [
+    ""
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
