--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "concurrently": "^3.5.0",
     "materialize-css": "^0.100.2",
     "react": "^15.6.1",
@@ -18,7 +19,9 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
-    "redux": "^3.7.2"
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
