--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "keywords": [""],
+  "keywords": [
+    ""
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
     "mongoose": "^4.11.11",
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "stripe": "^5.1.0"
   }
 }
